# ifood-ab-test-analysis

./: .env  .gitignore  README.md  funcoes_gerais.py  main.py  pyproject.toml
analysis/: ifood_test_ab_case_renan_marx.ipynb
analysis/reports_eda/: REPORT_AB_TEST.html  REPORT_CONSUMERS.html  REPORT_RESTAURANTS.html
reports/: REPORT_ORDERS.html
