[tool.poetry]
name = "ifood-processo-seletivo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.3"
ijson = "3.2.3"
duckdb = "0.10.2"
pandas = "^2.3.1"
pyarrow = "^20.0.0"
fastparquet = "^2024.11.0"
python-dotenv = "^1.1.1"
scipy = "^1.16.0"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.0"
sweetviz = "2.3.1"
seaborn = "^0.13.2"
setuptools = "65.5.0"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
